DMC-503 extensions